Catch parameters must not be lexically redeclared https://bugs.webkit.org/show_bug.cgi?id=208976

Reviewed by Keith Miller.

JSTests:

* test262/expectations.yaml:
Mark four test cases as passing.

Source/JavaScriptCore:

From https://tc39.es/ecma262/#sec-try-statement-static-semantics-early-errors:
  Catch : catch ( CatchParameter ) Block
    It is a Syntax Error if any element of the BoundNames of CatchParameter
    also occurs in the LexicallyDeclaredNames of Block.

In other words, let/const/class/function declarations in the immediate catch block scope
must not shadow catch parameters.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseTryStatement):
(JSC::Parser<LexerType>::parseBlockStatement):
* parser/Parser.h:
(JSC::Scope::Scope):
(JSC::Scope::setIsCatchBlockScope): Added.
(JSC::Scope::isCatchBlockScope): Added.
(JSC::Parser::declareVariable):
(JSC::Parser::declareFunction):


Canonical link: https://commits.webkit.org/222360@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258861 268f45cc-cd09-0410-ab3c-d52691b4dbfc